# battery_sizing_model

./: .gitignore  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
build_docs/source/: api.rst  conf.py  index.rst  usage.rst
data_processing/: arbin_lbt.py  check_data_requirements.ipynb  circuit_parameters.ipynb  deg_average_model_data.py  eis_data_requirements.ipynb  gamry_eis.py  primed_utils.py  save_batch_to_disk.py
degradation_model/: average_model.ipynb
docs/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_modules/: index.html
docs/_modules/battery_sizing_model/: blocks.html
docs/_sources/: installation.rst.txt
equivalent_circuit_model/: blocks.py  circuit_builder.py  standard_circuits.py
examples/: battery_sim_example.ipynb
junk/: eqc.ipynb  plot_sim.ipynb  test_circuit_model.ipynb  test_eis.ipynb  test_leaf.ipynb
lookup_tables/: charge_ocv.pkl  discharge_ocv.pkl  soc_interp_points.pkl
power_data/: readme.txt
src/battery_sizing_model/: blocks.py
